# curated-transformers

./: .gitignore  .readthedocs.yaml  DEVELOP.md  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  decode-demo.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
curated_transformers/: __init__.py  _compat.py  about.py  errors.py  listener.py  pipe.py  schedules.py  semver.py  test.py  util.py
curated_transformers/cli/: debug_pieces.py  qat.py  quantize.py
curated_transformers/generation/: __init__.py  auto_generator.py  config.py  default_generator.py  dolly_v2.py  falcon.py  generator.py  generator_wrapper.py  greedy.py  hf_hub.py  llama.py  logits.py  mpt.py  state.py  stop.py  stop_conditions.py  string_generator.py
curated_transformers/generation/models/: __init__.py  dolly_v2.py  generation_model.py  generator_model.py
curated_transformers/layers/: __init__.py  activations.py  attention.py  cache.py  embeddings.py  encoder.py  feedforward.py  normalization.py  scalar_weight.py  transformer.py
curated_transformers/models/: __init__.py  activations.py  architectures.py  attention.py  auto_model.py  config.py  curated_transformer.py  distill.py  embeddings.py  feedforward.py  hf_hub.py  hf_loader.py  hf_util.py  hf_wrapper.py  listeners.py  loading_util.py  module.py  normalization.py  output.py  param_sharing.py  pooling.py  remove_eos_bos.py  scalar_weight.py  torchscript_wrapper.py  transformer.py  transformer_model.py  types.py  with_non_ws_tokens.py  with_strided_spans.py
curated_transformers/models/albert/: __init__.py  _hf.py  config.py  encoder.py  layer_group.py
curated_transformers/models/bert/: __init__.py  _hf.py  config.py  embeddings.py  encoder.py  layer.py
curated_transformers/pipeline/: __init__.py  distill.py  transformer.py
curated_transformers/quantization/: __init__.py  helpers.py  quantizable.py
curated_transformers/repository/: __init__.py  _hf.py  file.py  fsspec.py  hf_hub.py  repository.py  transaction.py
curated_transformers/sharing/: __init__.py  descriptor.py  shareable.py
curated_transformers/tests/: compat.py  conftest.py  enable_gpu.py  test_cli_app.py  test_pipe.py  test_torchscript_wrapper.py  util.py  utils.py
curated_transformers/tokenization/: __init__.py  _fairseq.py  _hf_compat.py  auto_tokenizer.py  bbpe_encoder.py  bbpe_tokenizer.py  bert_tokenizer.py  camembert_tokenizer.py  char_encoder.py  chunks.py  gpt_neox_tokenizer.py  hf_hub.py  hf_loader.py  llama_tokenizer.py  mixins.py  roberta_tokenizer.py  sentencepiece_adapters.py  sentencepiece_encoder.py  sentencepiece_tokenizer.py  tokenizer.py  types.py  util.py  wordpiece_encoder.py  wordpiece_tokenizer.py  xlmr_tokenizer.py
curated_transformers/tokenizers/: __init__.py  _hf_compat.py  auto_tokenizer.py  bert_tokenizer.py  camembert_tokenizer.py  hf_hub.py  llama_tokenizer.py  roberta_tokenizer.py  sentencepiece_tokenizer.py  tokenizer.py  util.py
curated_transformers/util/: __init__.py  auto_model.py  dataclass.py  fsspec.py  hf.py  profile.py  pytorch.py  serde.py  string.py
docs/: Makefile
docs/source/: api-compat.rst  api.rst  building-blocks.rst  causal-lm.rst  conf.py  decoders.rst  deployment.rst  develop.rst  encoders.rst  generation.rst  index.rst  models.rst  quantization.rst  registries.rst  repositories.rst  requirements.in  requirements.txt  sharing.rst  tokenizers.rst  usage.rst  utils.rst
examples/: README.md  generate.py  passive-examples.json  passive2active.py
project/: project.yml
project/compressor/: \  autoencoder.yml  compressor_app.py  data.py  layers.py  model.py  tests.py  train.py  twinembedding.yml
project/configs/: base-config.cfg  layer-weighting.cfg  no-layer-weighting.cfg
spacy_experimental/transformers/: _compat.py  pipe.py  sentencepiece_adapters.py  sentencepiece_encoder.py
(+208 files in other folders)
