[metadata]
version = 1.0.0.dev0
description = Curated transformer models
url = https://github.com/explosion/curated-transformers
author = Explosion
author_email = contact@explosion.ai
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = true
include_package_data = true
python_requires = >=3.8
install_requires =
    curated-tokenizers>=0.0.7,<0.1.0
    huggingface-hub>=0.14
    torch>=1.12.0
    pyahocorasick>=2.0.0

[bdist_wheel]
universal = true

[sdist]
formats = gztar

[mypy]
exclude = tests
allow_redefinition = True
ignore_missing_imports = True
no_implicit_optional = True
