[metadata]
version = 1.2.0.dev0
description = A PyTorch library of transformer models and components
url = https://github.com/explosion/curated-transformers
author = Explosion
author_email = contact@explosion.ai
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = true
include_package_data = true
python_requires = >=3.8
install_requires =
    curated-tokenizers>=0.9.0.dev0,<1.0.0
    huggingface-hub>=0.14
    tokenizers>=0.13.3
    torch>=1.12.0

[options.extras_require]
quantization =
    bitsandbytes>=0.40
    # bitsandbytes has a dependency on scipy but doesn't 
    # list it as one for pip installs. So, we'll pull that
    # in too (until its rectified upstream).
    scipy>=1.11

[bdist_wheel]
universal = true

[sdist]
formats = gztar

[mypy]
exclude = tests
allow_redefinition = True
ignore_missing_imports = True
no_implicit_optional = True
