[metadata]
version = 2.0.0.dev2
description = A PyTorch library of transformer models and components
url = https://github.com/explosion/curated-transformers
author = Explosion
author_email = contact@explosion.ai
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = true
include_package_data = true
python_requires = >=3.8
install_requires =
    catalogue>=2.0.4,<2.1.0
    curated-tokenizers>=2.0.0.dev0,<3.0.0
    huggingface-hub>=0.14
    tokenizers>=0.13.3
    torch>=1.12.0

[options.extras_require]
quantization =
    bitsandbytes>=0.40
    # bitsandbytes has a dependency on scipy but doesn't 
    # list it as one for pip installs. So, we'll pull that
    # in too (until it's rectified upstream).
    scipy>=1.11

[options.entry_points]
curated_transformers_causal_lms =
    curated-transformers.LlamaCausalLM = curated_transformers.models:LlamaCausalLM
    curated-transformers.FalconCausalLM = curated_transformers.models:FalconCausalLM
    curated-transformers.GPTNeoXCausalLM = curated_transformers.models:GPTNeoXCausalLM
    curated-transformers.MPTCausalLM = curated_transformers.models:MPTCausalLM

curated_transformers_decoders =
    curated-transformers.LlamaDecoder = curated_transformers.models:LlamaDecoder
    curated-transformers.FalconDecoder = curated_transformers.models:FalconDecoder
    curated-transformers.GPTNeoXDecoder = curated_transformers.models:GPTNeoXDecoder
    curated-transformers.MPTDecoder = curated_transformers.models:MPTDecoder

curated_transformers_encoders =
    curated-transformers.ALBERTEncoder = curated_transformers.models:ALBERTEncoder
    curated-transformers.BERTEncoder = curated_transformers.models:BERTEncoder
    curated-transformers.CamemBERTEncoder = curated_transformers.models:CamemBERTEncoder
    curated-transformers.RoBERTaEncoder = curated_transformers.models:RoBERTaEncoder
    curated-transformers.XLMREncoder = curated_transformers.models:XLMREncoder

[bdist_wheel]
universal = true

[sdist]
formats = gztar

[mypy]
exclude = tests
allow_redefinition = True
ignore_missing_imports = True
no_implicit_optional = True
